<resources>
    <string name="app_name">Lesson_08_ProblemStatement</string>
    <string name="tvTitle">Song Title</string>
    <string name="etTitle">Enter song title here</string>
    <string name="tvSinger">Singer</string>
    <string name="etSinger">Enter singers name here</string>
    <string name="tvYear">Year</string>
    <string name="etYear">Enter year of release here</string>
    <string name="tvStars">Stars</string>
    <string name="btnInsert">Insert</string>
    <string name="btnShowList">Show List</string>
    <string name="sortByTitle">Sort by Title</string>
    <string name="sortBySingers">Sort by Singers</string>
    <string name="btnBack"><![CDATA[<< Return to Homepage]]></string>
</resources>